--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">FLO</string>
+
     <string name="LILIC_album_introduce">\'아이유(IU)\' 정규 5집 [LILAC]
         \n\n\"안녕 꽃잎 같은 안녕\"
         \n\"내 맘에 아무 의문이 없어 난 이 다음으로 가요\"
@@ -12,4 +13,16 @@
         써니 비주얼(Coin)이 함께 참여하여 각각의 개성 있고 감각적인 영상들과 아이유의 음악이 만나 막강한 시너지를 발휘했다.
         \n\n앨범명과 함께 타이틀 곡 제목에 사용한 \'라일락\' 꽃의 꽃말은 \'첫사랑\', 그리고 \'젊은 날의 추억\'이다.
         20대의 첫 페이지부터 마지막 페이지까지 지켜봐 준 모든 이들에게 감사함을 담아 화려하고, 그리고 조금은 쓸쓸하기도 한 아이유만의 인사를 전한다.</string>
+
+    <string name="app_store_buy_information">▸ 모바일 무제한 듣기 이용권은 결제 시점으로부터 만 30일의 사용기간을 기준으로 하는 월 단위 상품으로
+        기준으로 하는 월 단위 상품으로, FLO APP을 지원하는 스마트폰 및 태블릿에서 사용하실 수 있습니다.
+        \n\n▸ 무제한 듣기+오프라인 재생의 오프라인 파일 저장 및 재생은 인증 된 모바일 디바이스 1대에서 가능하며, 오프라인 재생 기능을 통해 데이터 연결 없이
+        음악을 감상할 수 있습니다.
+        \n\n▸ 오프라인 파일의 저장 허용 기기는 한 ID 당 1대까지 모바일 기기 등록이 가능하며 월 1회 변경이 가능합니다. (변경 횟수는 매월 1일 초기화)
+        \n\n▸ App Store 결제는 현재 사용하고 있는 Apple 계정에 등록된 결제수단으로 결제됩니다.
+        \n\n▸ 구매 가격에는 부가세와 결제 수수료가 포함되어 있습니다.
+        \n\n▸ 이용권 결제 금액에 대한 확인 및 환불은 Apple Store를 통해 가능하며, FLO에는 결제 금액 확인 및 환불 처리가 불가합니다.
+        관련 문의는 Apple 고객센터(080-333-4000)으로 부탁드립니다.
+        \n\n▸ 음원 관리사의 요청으로 특정 음원의 경우 서비스 이용이 제한될 수 있습니다.
+    </string>
 </resources>
